Change all prices to be integers and USD cents
